--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="HandheldFriendly" content="true">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Menu Franc'Asie</title>
     </head>
-
     <body>
         <img src="resources/0.png" alt="0">
-        <br>
         <img src="resources/1.png" alt="1">
         <img src="resources/2.png" alt="2">
         <img src="resources/3.png" alt="3">
@@ -30,7 +27,10 @@
         <img src="resources/17.png" alt="17">
         <img src="resources/18.png" alt="18">
     </body>
+    <style>
+        img {
+            width:1080px;
+            height:1920px;
+        }
+    </style>
 </html>
-
-<!-- https://drakehunturz08.github.io/MenuFrancAsie/ -->
-<!-- https://francasie.github.io/Menu/ -->
